# Remote_Attestation

./: .gitignore  .gitmodules  README.md  make_demo.sh  user_manual.txt
attester/: CMakeLists.txt  edge_wrapper.cpp  edge_wrapper.h  enclave-host.cpp  source.sh  start_server.sh
attester/attester_eapp/: CMakeLists.txt  Makefile.deprecated  attester_eapp.c  channel.c  channel.h  edge_wrapper.c  edge_wrapper.h
attester/include/: edge_defines.h  hacks.h
attester/server_eapp/: server_eapp.c
certs/CA/: CA.crt  CA.key  CA.srl  ca-cert.pem
certs/attester/: attester.crt  attester.csr  attester.key
certs/registrar/: registrar.crt  registrar.csr  registrar.key  registrar.v3.ext
certs/verifier/: verifier.crt  verifier.csr  verifier.key
client/: CMakeLists.txt  source.sh  start_client.sh
client/cmake/: FindSqlite3.cmake
client/db/: gvalues.db  gvalues.db-journal
client/trusted_client/: Makefile  client.cpp  trusted_client.cpp
registrar/: Makefile  developer_api.cpp  developer_api.hpp  openssl_op.cpp  openssl_op.hpp  pp_api.cpp  pp_api.hpp  registrar.cpp  registrar_api.py  registrar_db_op.cpp  registrar_db_op.hpp
registrar/db/: registrar.db
registrar/registrar_cert/: .key  myserver.local.crt  myserver.local.csr  myserver.local.key  registrar.crt  registrar.key  registrar.srl
server/: edge_wrapper.h  start_server.sh
server/server_eapp/: server_eapp.c
verifier/: CMakeLists.txt  Makefile  attestation.cpp  attestation.hpp  registration.cpp  registration.hpp  source.sh  start_client.sh  trusted_verifier.cpp  trusted_verifier.hpp  verifier.cpp  verifier_attestation_api.py  verifier_registration_api.py
verifier/certs/: verifier.crt  verifier.csr  verifier.key
verifier/certs/CA/: verifier_ca.crt  verifier_ca.key  verifier_ca.srl
verifier/db/: gvalues.db
verifier/include/: calc_msg.h  edge_defines.h  sm_expected_hash.h
verifier/keystone_build/: Makefile
verifier/trusted_client/: Makefile  client.h  trusted_client.h
verifier/trusted_verifier/: Makefile  trusted_verifier.cpp  trusted_verifier.h  trusted_verifier.hpp  verifier.cpp  verifier.h  verifier_api.py  verifier_db_op.cpp  verifier_db_op.hpp
verifier_2/: Makefile  verifier.cpp  verifier_api.py
verifier_2/db/: gvalues.db
verifier_2/trusted_verifier/: verifier_db_op.cpp  verifier_db_op.hpp
